Fixed Makefile because I have not been compiling with correct flags ALL THESE WHILE

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,16 +1,21 @@
 SRCS = Conversion.cpp
 
+MAIN = main.cpp
+
 OBJS = $(SRCS:.cpp=.o) main.o
 
 HEADERS = $(SRCS:.cpp=.hpp)
 
 CC = c++ -std=c++98
 
-FLAGS = -Wall -Wextra -Werror
+FLAGS = -Wall -Wextra -Werror -Wimplicit-fallthrough=0
 
 NAME = convert
 
 all:		$(NAME)
+
+$(OBJS):	$(SRCS) $(MAIN)
+			$(CC) $(FLAGS) $(SRCS) $(MAIN) -c
 
 $(NAME):	$(OBJS) $(HEADERS)
 			$(CC) $(FLAGS) $(OBJS) -o $(NAME)
