ex00: used strtod to check for overflows for all conversion type

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -8,7 +8,7 @@ HEADERS = $(SRCS:.cpp=.hpp)
 
 CC = c++ -std=c++98
 
-FLAGS = -Wall -Wextra -Werror -Werror=implicit-fallthrough=0
+FLAGS = -Wall -Wextra -Werror -Werror -fsanitize=address
 
 NAME = convert
 
